@@ -1,3 +1,9 @@
+2007-11-22  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Use eel_strdup_printf_with_custom to make it easier
+	to create error dialogs.
+
 2007-11-21  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
